<resources>
    <string name="app_name">GB_Homework_2_Calculator</string>
    <string name="key_one">1</string>
    <string name="key_two">2</string>
    <string name="key_three">3</string>
    <string name="key_four">4</string>
    <string name="key_five">5</string>
    <string name="key_six">6</string>
    <string name="key_seven">7</string>
    <string name="key_eight">8</string>
    <string name="key_nine">9</string>
    <string name="key_zero">0</string>
    <string name="key_dot">.</string>
    <string name="key_mult">*</string>
    <string name="key_add">+</string>
    <string name="key_div">/</string>
    <string name="key_sub">-</string>
    <string name="btn_clear">C</string>
    <string name="btn_res">=</string>
    <string name="hint">Enter something</string>
    <string name="some_error">Some Error</string>
    <string name="theme_one">Theme One</string>
    <string name="theme_two">Two</string>
    <string name="theme_three">Three</string>
    <string name="btn_settings">Choose a Theme</string>
    <string name="btn_man">Man</string>

</resources>