<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main_calculator">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:text="@string/key_one" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:text="@string/key_two" />

    <Button
        android:id="@+id/key_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:text="@string/key_three" />

    <Button
        android:id="@+id/key_add"
        style="@style/CalcButton.Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_add" />

    <Button
        android:id="@+id/key_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:text="@string/key_four" />


    <Button
        android:id="@+id/key_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:text="@string/key_five" />

    <Button
        android:id="@+id/key_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:text="@string/key_six" />


    <Button
        android:id="@+id/key_sub"
        style="@style/CalcButton.Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/towerruinsexpandital"
        android:text="@string/key_sub" />

    <Button
        android:id="@+id/key_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:text="@string/key_seven" />


    <Button
        android:id="@+id/key_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:text="@string/key_eight" />

    <Button
        android:id="@+id/key_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:text="@string/key_nine" />

    <Button
        android:id="@+id/key_mult"
        style="@style/CalcButton.Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_mult" />

    <Button

        android:id="@+id/key_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:text="@string/key_zero"
        app:layout_constraintEnd_toEndOf="@id/key_eight" />


    <Button
        android:id="@+id/key_dot"
        style="@style/CalcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:text="@string/key_dot" />


    <Button
        android:id="@+id/btn_clear"
        style="@style/CalcButton.V4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_clear" />

    <Button
        android:id="@+id/key_div"
        style="@style/CalcButton.Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_div" />

    <Button
        android:id="@+id/btn_res"
        style="@style/CalcButton.Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_res" />

</merge>